# jarl

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  dist-workspace.toml
.github/scripts/: process_lint_ci.R
.github/workflows/: cargo-test.yml  compare-results.yml  docs.yml  release-vscode.yml  release.yml
artifacts/: jarl.schema.json
crates/comments/: Cargo.toml
crates/flir-cli/: Cargo.toml
crates/flir-lsp/: Cargo.toml  README.md
crates/jarl/: Cargo.toml
crates/jarl-core/: Cargo.toml
crates/jarl-lsp/: Cargo.toml
docs/: _quarto.yml  changelog.md  config.md  copy_readme.R  development.qmd  index.md  make_docs.R  rules.md  styles.css  using-jarl.md
docs/rules/: all_equal.md  any_duplicated.md  any_is_na.md  assignment.md  class_equals.md  coalesce.md  duplicated_arguments.md  equals_na.md  for_loop_index.md  grepv.md  implicit_assignment.md  is_numeric.md  length_levels.md  length_test.md  length_test.qmd  lengths.md  matrix_apply.md  numeric_leading_zero.md  redundant_equals.md  repeat.md  sample_int.md  sort.md  true_false_symbol.md  (+1 more)
src/: args.rs  check.rs  check_ast.rs  check_expression.rs  config.rs  description.rs  events.rs  fix.rs  lib.rs  lints.rs  main.rs  message.rs  output_format.rs  rule_table.rs  trait_lint_checker.rs  traits.rs  utils.rs  utils_test.rs
tests/: test-AnyNA.rs  test-EqualsNa.rs
xtask/: Cargo.toml  README.md
xtask/codegen/: Cargo.toml
xtask/codegen/src/: lib.rs  main.rs  r_json_schema.rs
xtask/codegen/src/snapshots/: xtask_codegen__r_json_schema__tests__schema_can_be_generated_and_hasnt_changed.snap
(+133 files in other folders)
